[WIP] arm64: DT: Initial payton device tree support We might not need all of these changes.
Signed-off-by: Daniel Vásquez <danielgusvt@gmail.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -8,6 +8,10 @@ dtb-$(CONFIG_ARCH_QCOM)	+= msm8994-angler-rev-101.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-mtp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= sdm845-mtp.dtb
 
+ifeq ($(CONFIG_PAYTON_DTB),y)
+dtb-$(CONFIG_ARCH_SDM630) += sdm630-payton-p2b.dtb
+endif
+
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
 clean-files    := *.dtb *.dtbo
